# nondeterministic-opengl

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
deterministic/: CMakeLists.txt  InteractiveWindow.hpp  Texture.hpp  main.cpp  main.hpp  utils_gl.hpp
deterministic/resources/: fragment.glsl  main.cpp  vertex.glsl
simpleraytracer/: CMakeLists.txt  examples.hpp  imgui_utils.hpp  rt_primitives.hpp
simpleraytracer/resources/: light_frag.glsl  light_vert.glsl  rt_frag.glsl
tutorialopengl/: CMakeLists.txt  Models.hpp  Texture.hpp  examples.cpp  examples.hpp  imgui_utils.hpp  main.cpp  main.hpp  rt_primitives.hpp  sample_raytracer.cpp  utils.hpp  utils_gl.hpp
tutorialopengl/resources/: fragment.glsl  rt_vert.glsl  vertex.glsl
windowing/: CMakeLists.txt
windowing/include/: Callbacks.hpp  CameraWindow.hpp  FirstPersonCamera.hpp  SimpleWindow.hpp
windowing/src/: Callbacks.cpp  CameraWindow.cpp  FirstPersonCamera.cpp  SimpleWindow.cpp
